--- a/src/layout/footer/Footer.css
+++ b/src/layout/footer/Footer.css
@@ -1,5 +1,8 @@
 .footer {
   width: 100%;
-  height: 200px;
-  color: royalblue;
+  height: 100px;
+  overflow: hidden;
+  margin-top: auto;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.7);
 }
