--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -1,30 +1,147 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-.logo {
-  color: red;
+.fix {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 header {
-  position: absolute;
-  top: 0;
-  left: 0;
+  overflow: hidden;
   width: 100%;
-  padding: 40px 100px;
-  z-index: 1000;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  height: 100vh;
+  font-family: "Poppins", sans-serif;
 }
-header .logo {
+.vid-bg {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.nav-area {
+  background: rgba(0, 0, 0, 0.7);
+  height: 60px;
+  position: absolute;
+
+  left: 0;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.logo {
+  height: 60px;
+
   color: #fff;
+  font-size: 35px;
+  text-transform: capitalize;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+.logo span {
+  color: #f5bb00;
+}
+.menu-area {
+  list-style: none;
+  margin: 20px 0;
+}
+.menu-area li {
+  display: inline-block;
+  margin: 0 10px;
+}
+.menu-area li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  padding: 5px 0px;
+  margin-left: 30px;
+  letter-spacing: 2px;
+}
+.menu-area li.active a {
+  color: #fff;
+  font-weight: 500;
+  position: relative;
+}
+.menu-area li a::after {
+  content: "";
+  background: #f5bb00;
+  width: 0;
+  height: 2px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transition: width 0.5s;
+}
+.menu-area li a:hover::after {
+  width: 100%;
+}
+.menu-area li a:hover {
+  color: #f5bb00;
+  transition: 0.3s;
+}
+.banner-text {
+  text-align: center;
+  position: absolute;
+}
+.banner-text h2 {
+  color: #fff;
+  font-size: 5rem;
+  margin: 0;
+}
+.banner-text h2 span {
+  color: #f5bb00;
+}
+.banner-text p {
+  color: #fff;
+  font-size: 1.3rem;
+  margin: 0;
+  font-weight: bold;
+}
+.btn {
+  display: inline-block;
+  margin-top: 5%;
+  background: transparent;
+  border: 0;
+  font-size: 20px;
   text-transform: uppercase;
+  border: 3px solid #fff;
+  padding: 10px 25px;
+  border-radius: 25px;
+  color: #fff;
   cursor: pointer;
 }
+.btn:hover {
+  background: rgba(0, 0, 0, 0.7);
+  color: #f5bb00;
+  border: 3px solid #f5bb00;
+  transform: scale(1.2);
+  transition: all 0.3s;
+}
+
+.social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.social li {
+  list-style: none;
+}
+.social li a {
+  display: inline-block;
+  margin: 20px 15px;
+  filter: invert(1);
+  transform: scale(0.5);
+  transition: 0.5s;
+}
+.social li a:hover {
+  transform: scale(0.8) translateY(-15px);
+  color: #f5bb00;
+}
+
 .toggle {
-  position: relative;
+  display: none;
   width: 60px;
   height: 60px;
   background: url(https://i.ibb.co/HrfVRcx/menu.png);
@@ -40,109 +157,36 @@ header .logo {
   background-position: center;
   cursor: pointer;
 }
+
 .showcase {
   position: absolute;
   right: 0;
-  width: 100%;
-  min-height: 100vh;
+  top: 60px;
+  width: 20%;
+  height: 200px;
   padding: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #111;
+  background: #f5bb00;
   transition: 0.5s;
   z-index: 2;
 }
+
 .showcase.active {
   right: 300px;
 }
 
-.showcase video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #03a9f4;
-  mix-blend-mode: overlay;
-}
-.text {
-  position: relative;
-  z-index: 10;
+.hide-menu {
+  display: none;
+  transition: all 0.5s;
 }
 
-.text h2 {
-  font-size: 5em;
-  font-weight: 800;
-  color: #fff;
-  line-height: 1em;
-  text-transform: uppercase;
-}
-.text h3 {
-  font-size: 4em;
-  font-weight: 700;
-  color: #fff;
-  line-height: 1em;
-  text-transform: uppercase;
-}
-.text p {
-  font-size: 1.1em;
-  color: #fff;
-  margin: 20px 0;
-  font-weight: 400;
-  max-width: 700px;
-}
-.text a {
-  display: inline-block;
-  font-size: 1em;
-  background: #fff;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 500;
-  margin-top: 10px;
-  color: #111;
-  letter-spacing: 2px;
-  transition: 0.2s;
-}
-.text a:hover {
-  letter-spacing: 6px;
-}
-.social {
-  position: absolute;
-  z-index: 10;
-  bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.social li {
-  list-style: none;
-}
-.social li a {
-  display: inline-block;
-  margin-right: 20px;
-  filter: invert(1);
-  transform: scale(0.5);
-  transition: 0.5s;
-}
-.social li a:hover {
-  transform: scale(0.5) translateY(-15px);
-}
 .menu {
   position: absolute;
   top: 0;
   right: 0;
-  width: 300px;
+  width: 200px;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -153,22 +197,29 @@ header .logo {
 }
 .menu ul li {
   list-style: none;
+  margin: 10px 0;
 }
 .menu ul li a {
   text-decoration: none;
-  font-size: 24px;
-  color: #111;
+  font-size: 26px;
+  color: black;
+  transition: all 0.5s;
 }
 .menu ul li a:hover {
-  color: #03a9f4;
+  color: blue;
+  font-weight: 600;
+}
+@media (max-width: 641px) {
+  .nav {
+    display: none;
+  }
+  .toggle {
+    display: block;
+  }
 }
 
-@media (max-width: 991px) {
-  .showcase,
-  .showcase header {
-    padding: 40px;
-  }
-  .text h2 {
+@media (max-width: 641px) {
+  .banner-text h2 {
     font-size: 3em;
   }
   .text h3 {
