--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -80,6 +80,10 @@ header {
   color: #f5bb00;
   transition: 0.3s;
 }
+.menu-area li a.active-link {
+  color: #f5bb00;
+}
+
 .banner-text {
   text-align: center;
   position: absolute;
