--- a/src/components/cards/Card.css
+++ b/src/components/cards/Card.css
@@ -1,11 +1,13 @@
+
 .card-home {
-  max-width: 300px;
+  width: 300px;
   height: 350px;
   margin: 5px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border: 1px solid blue;
 }
 
 .card-home-item img {
