--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,7 +1,3 @@
 .home-page {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  margin: 5%;
+ border: 1px solid red;
 }
