--- a/src/components/cards/Card.css
+++ b/src/components/cards/Card.css
@@ -1,13 +1,19 @@
-
 .card-home {
   width: 300px;
   height: 350px;
-  margin: 5px;
+  margin: 20px 5px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
- 
+}
+.home-general {
+  font-family: "Caveat", cursive;
+  font-weight: 700;
+  font-size: 50px;
+  text-transform: uppercase;
+  margin: 40px 0;
+  font-weight: 700;
 }
 
 .card-home-item img {
@@ -16,4 +22,7 @@
 .card-home-text {
   width: 100%;
   text-align: center;
+
+  font-size: 25px;
+  font-weight: 700;
 }
