--- a/src/components/matchCards/MatchCards.css
+++ b/src/components/matchCards/MatchCards.css
@@ -1,10 +1,6 @@
-
-
-.cards {
+cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 5%;
-  border-top: solid 1px rgba(128, 128, 128, 0.452);
-  background-color: whitesmoke;
 }
