--- a/src/components/matchCards/singleMatchCard/SingleMatchCard.css
+++ b/src/components/matchCards/singleMatchCard/SingleMatchCard.css
@@ -1,40 +1,5 @@
-.card {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  padding: 7px;
-  width: 300px;
-  height: auto;
-  text-align: center;
-  border: 5px solid rgb(105, 105, 105);
-  overflow: hidden;
-  padding: 12px;
-  justify-content: space-between;
-  border-radius: 12px;
-  user-select: none;
-}
-
-.card img {
-  width: 100%;
-  height: 100%;
-  border-radius: 5%;
-}
-
-.card p {
-  display: flex;
-  font-size: 1.2rem;
-  font-weight: bold;
-  border-radius: 2%;
-  background-color: rgb(231, 230, 230);
-
-  padding: 12px;
-  color: rgb(0, 0, 0);
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-}
-
-.card:hover {
-  border-color: black;
-  cursor: pointer;
+.item-card:hover {
+  transform: scale(1.2);
+  transition: all 0.8s ease 0.4s;
+  z-index: 2;
 }
