--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -84,25 +84,26 @@ header {
   color: #f5bb00;
 }
 
-.banner-text {
+.header-text {
   text-align: center;
   position: absolute;
 }
-.banner-text h2 {
+.header-text h2 {
   color: #fff;
   font-size: 5rem;
+  font-weight: bold;
   margin: 0;
 }
-.banner-text h2 span {
+.header-text h2 span {
   color: #f5bb00;
 }
-.banner-text p {
+.header-text p {
   color: #fff;
   font-size: 1.3rem;
   margin: 0;
   font-weight: bold;
 }
-.btn {
+.header-button {
   display: inline-block;
   margin-top: 5%;
   background: transparent;
@@ -115,7 +116,7 @@ header {
   color: #fff;
   cursor: pointer;
 }
-.btn:hover {
+.header-button:hover {
   background: rgba(0, 0, 0, 0.7);
   color: #f5bb00;
   border: 3px solid #f5bb00;
@@ -211,10 +212,9 @@ header {
 }
 .menu ul li a:hover {
   color: blue;
-  font-weight: 600;
 }
 @media (max-width: 641px) {
-  .nav {
+  .header-nav {
     display: none;
   }
   .toggle {
@@ -223,7 +223,7 @@ header {
 }
 
 @media (max-width: 641px) {
-  .banner-text h2 {
+  .header-text h2 {
     font-size: 3em;
   }
   .text h3 {
