--- a/src/resourses/styles.css
+++ b/src/resourses/styles.css
@@ -5,7 +5,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.content {
+.all-content {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
