--- a/src/pages/sing_up/SingUp.css
+++ b/src/pages/sing_up/SingUp.css
@@ -1,6 +1,6 @@
 .auth-page {
-  height: calc(100vh - 160px);
-  background: url("./campNou.jpg") no-repeat;
+  height: 100%;
+  background: url("/public/img/bg.png") no-repeat;
   background-size: cover;
   opacity: 0.8;
 }
