--- a/src/components/errorBandle/Error.css
+++ b/src/components/errorBandle/Error.css
@@ -1,4 +1,12 @@
 .error {
-  color: red;
   font-size: 20px;
+  position: absolute;
+  height: 30px;
+  text-align: center;
+  background-color: red;
+  line-height: 30px;
+  color: aliceblue;
+  width: 400px;
+  top: calc(50% - 50px);
+  left: calc(50% - 200px);
 }
