--- a/src/layout/footer/Footer.css
+++ b/src/layout/footer/Footer.css
@@ -2,10 +2,12 @@
   width: 100%;
   height: 100px;
   overflow: hidden;
-  margin-top: auto;
+
   color: #fff;
- 
+  background-color: #000000;
+  opacity: 0.7;
 }
-.footer h6 {
-  background-color: rgba(0, 0, 0, 0.7);
+.footer .footer-item {
+  background-color: #000000;
+  opacity: 0.7;
 }
