--- a/src/pages/Watch matches/WatchMatches.css
+++ b/src/pages/Watch matches/WatchMatches.css
@@ -1,10 +1,14 @@
 .watchMatches {
+  min-height: 100vh;
+  width: 100%;
   position: relative;
-  height: 100vh;
 }
-
-.loader-styles {
-  position: absolute;
-  left: calc(50%-50px);
-  top: calc(50%-110px);
+.watchMatches-general {
+  color: rgba(0, 0, 0, 0.7);
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+.watchMatches-general span {
+  font-family: "Poppins", sans-serif;
+  color: #f5bb00;
 }
