--- a/src/resourses/styles.css
+++ b/src/resourses/styles.css
@@ -1,12 +1,27 @@
-body {
-  padding: 0;
+* {
   margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+body {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
 }
-
-.all-content {
+.content-all {
   display: flex;
-  flex-direction: column;
   min-height: 100vh;
+  flex-direction: column;
+}
+#main {
+  flex: 1 0 auto;
+}
+
+.loader-styles {
+  position: absolute;
+  left: calc(50% - 50px);
+  top: calc(50% - 80px);
 }
