--- a/src/components/authForm/AuthForm.css
+++ b/src/components/authForm/AuthForm.css
@@ -1,13 +1,22 @@
 .auth-form {
-  width: 50vw;
-  height: calc(100vh - 200px);
+  min-width: 50%;
+  height: calc(100vh - 160px);
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  
 }
 .form-sub {
   max-width: 360px;
+}
+
+@media (max-width: 767px) {
+  .auth-form {
+    width: 100%;
+    height: 100vh;
+  }
+  
 }
