--- a/src/pages/sing_up/SingUp.css
+++ b/src/pages/sing_up/SingUp.css
@@ -1,6 +1,16 @@
 .auth-page {
-  height: 100%;
-  background: url("/public/img/bg.png") no-repeat;
+  
+  background: url("/public/img/foot.jpg") no-repeat;
   background-size: cover;
   opacity: 0.8;
+  min-height: calc(100vh - 160px);
+  
+  
+}
+
+@media (max-width: 1026px) {
+  .auth-page {
+   width: 600px;
+  }
+  
 }
