--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -177,7 +177,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #f5bb00;
+  background: rgba(0, 0, 0, 0.7);
   transition: 0.5s;
   z-index: 2;
 }
@@ -211,11 +211,17 @@ header {
 .menu ul li a {
   text-decoration: none;
   font-size: 26px;
-  color: black;
+  color: #f5bb00;
   transition: all 0.5s;
 }
 .menu ul li a:hover {
   color: blue;
+}
+.user-ented .composition-button {
+  color: #f5bb00;
+}
+.menu .composition-button {
+  color: #f5bb00;
 }
 @media (max-width: 768px) {
   .header-nav {
