--- a/src/components/errorBandle/Error.css
+++ b/src/components/errorBandle/Error.css
@@ -1,6 +1,23 @@
 .err {
   color: red;
+  background: white;
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #f5bb00;
+  top: calc(50% - 50px);
+  left: calc(50% - 100px);
+  z-index: 10;
+  border-radius: 5px;
 }
+.err > p {
+  margin: 0;
+}
+
 .soccess {
   color: green;
 }
