--- a/src/layout/header/Header.css
+++ b/src/layout/header/Header.css
@@ -88,6 +88,14 @@ header {
   color: #f5bb00;
 }
 
+.drop-menu {
+  background: white;
+  color: black;
+  border: 2px solid #f5bb00;
+  position: absolute;
+  z-index: 9999;
+}
+
 .header-text {
   text-align: center;
   position: absolute;
